@@ -79,7 +79,7 @@ public class ModMenus {
             new BalmMenuFactory<WaystoneSelectionMenu, Collection<Waystone>>() {
                 @Override
                 public WaystoneSelectionMenu create(int windowId, Inventory inventory, Collection<Waystone> waystones) {
-                    return new WaystoneSelectionMenu(ModMenus.portstoneSelection.get(), null, windowId, waystones, Collections.emptySet());
+                    return new WaystoneSelectionMenu(ModMenus.portstoneSelection.get(), null, windowId, waystones, Set.of(TeleportFlags.PORTSTONE));
                 }
 
                 @Override
